<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.californiaquiz.MainActivity">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/banner"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/largebanner" />

        <TextView
            android:id="@+id/title"
            style="@style/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/question1"
            style="@style/questionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/question1" />

        <CheckBox
            android:id="@+id/quiz_q1_opt1"
            style="@style/answerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/q1answer1" />

        <CheckBox
            android:id="@+id/quiz_q1_opt2"
            style="@style/answerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/q1answer2" />

        <CheckBox
            android:id="@+id/quiz_q1_opt3"
            style="@style/answerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/q1answer3" />

        <CheckBox
            android:id="@+id/quiz_q1_opt4"
            style="@style/answerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/q1answer4" />

        <TextView
            android:id="@+id/question2"
            style="@style/questionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/question2" />

        <EditText
            android:id="@+id/quiz_q2_input"
            style="@style/answerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/userinput"
            android:inputType="text" />

        <TextView
            android:id="@+id/question3"
            style="@style/questionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/question3" />

        <RadioGroup
            android:id="@+id/quiz_q3_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q3answer1"
                style="@style/answerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:onClick="onThirdAnswerClick"
                android:text="@string/q3answer1" />

            <RadioButton
                android:id="@+id/q3answer2"
                style="@style/answerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:onClick="onThirdAnswerClick"
                android:text="@string/q3answer2" />

            <RadioButton
                android:id="@+id/q3answer3"
                style="@style/answerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:onClick="onThirdAnswerClick"
                android:text="@string/q3answer3" />

            <RadioButton
                android:id="@+id/q3answer4"
                style="@style/answerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:onClick="onThirdAnswerClick"
                android:text="@string/q3answer4" />
        </RadioGroup>

        <TextView
            android:id="@+id/question4"
            style="@style/questionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/question4" />

        <CheckBox
            android:id="@+id/quiz_q4_opt1"
            style="@style/answerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/q4answer1" />

        <CheckBox
            android:id="@+id/quiz_q4_opt2"
            style="@style/answerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/q4answer2" />

        <CheckBox
            android:id="@+id/quiz_q4_opt3"
            style="@style/answerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/q4answer3" />

        <CheckBox
            android:id="@+id/quiz_q4_opt4"
            style="@style/answerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/q4answer4" />

        <TextView
            android:id="@+id/question5"
            style="@style/questionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/question5" />

        <RadioGroup
            android:id="@+id/quiz_q5_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q5answer1"
                style="@style/answerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:onClick="onFifthAnswerClick"
                android:text="@string/q5answer1" />


            <RadioButton
                android:id="@+id/q5answer2"
                style="@style/answerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:onClick="onFifthAnswerClick"
                android:text="@string/q5answer2" />


            <RadioButton
                android:id="@+id/q5answer3"
                style="@style/answerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:onClick="onFifthAnswerClick"
                android:text="@string/q5answer3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question6"
            style="@style/questionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/question6" />

        <RadioGroup
            android:id="@+id/quiz_q6_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/q6answer1"
                style="@style/answerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:onClick="onSixthAnswerClick"
                android:text="@string/q6answer1" />

            <RadioButton
                android:id="@+id/q6answer2"
                style="@style/answerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:onClick="onSixthAnswerClick"
                android:text="@string/q6answer2" />

            <RadioButton
                android:id="@+id/q6answer3"
                style="@style/answerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:onClick="onSixthAnswerClick"
                android:text="@string/q6answer3" />

            <RadioButton
                android:id="@+id/q6answer4"
                style="@style/answerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:onClick="onSixthAnswerClick"
                android:text="@string/q6answer4" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:onClick="onResultButtonClick"
                android:text="@string/result" />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:onClick="onResetButtonClick"
                android:text="@string/reset" />
        </LinearLayout>

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
          />
    </LinearLayout>
</ScrollView>